<resources>
    <string name="app_name">Quiz Application</string>
    <string name="ques1">Question: 1 What is the Longest sea beach in the world?</string>
    <string name="option1">"Cox's Bazar"</string>
    <string name="option2">Stockton Beach</string>
    <string name="option3">Virginia Beach</string>
    <string name="option4">Bali sea beach</string>

    <string name="ques2">Question: 1 Who is the owner of Android OS?</string>
    <string name="option5">Walton</string>
    <string name="option6">Huawei</string>
    <string name="option7">Apple</string>
    <string name="option8">Google</string>
</resources>